resources/css/style.css
@import url(../../public/fonts/fontawesome-free-6.2.0-web/css/all.min.css);

@font-face {
    font-family: Montserrat;
    src: url(../../public/fonts/Montserrat/Montserrat-VariableFont_wght.ttf);
}

@font-face {
    font-family: "ubuntu-mono";
    src: url(../../public/fonts/Ubuntu_Mono/UbuntuMono-Regular.ttf);
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    scrollbar-width: thin;
    scrollbar-color: #8c8c8c transparent;
    scrollbar-gutter: stable;
}
:root {
    --white-color: #fff;
    --main-color: #0f6cbd;
    --blue-color: #82b0f5;
    --orange-color: #f5b933;
    --black-color: #fff;
    --green-color: #45a5ba;
    --main-font: "ubuntu-mono", "Courier New", "Arial";
    --number-font: "ubuntu-mono", "Courier New", "Arial";
    --background-color: #f5f5f5;
}
html {
    color: #1c2536;
    /* font-size: 62.5%; */
    touch-action: none;
}
body {
    font-family: var(--main-font);
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    -webkit-tap-highlight-color: transparent;
    -user-select: none;
    background-color: var(--background-color);
    /* font-size: 2rem; */
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    @apply fixed bottom-0 left-0 right-0 top-0 min-h-[300px];
}
a {
    color: inherit;
    display: inline-block;
    text-decoration: none;
}
i {
    pointer-events: none;
}

input[type="number"] {
    font-family: var(--number-font);
}
input[type="color"] {
    padding: 0;
}
input::-moz-focus-inner {
    border: 0;
}
input:focus {
    outline: none;
}
li {
    list-style: none;
}

.step-active {
    @apply !bg-green-200 ring-4 ring-green-500;
}
.step-active.Cancel {
    @apply !bg-yellow-200 ring-yellow-500;
}
.done:not(.step-active) {
    opacity: 70%;
}

.fullscreen {
    @apply fixed bottom-0 left-0 right-0 top-0 z-10;
}

.bg-main {
    background-color: #0f6cbd;
}
.text-white {
    color: #fff;
}
.bg-white {
    background-color: #fff;
}
.heading {
    font-size: 1.6rem;
    font-weight: 600;
    margin: 4px 0;
    text-align: center;
}
/* ::-webkit-scrollbar {
    width: 4px;
    height: 4px;
}
::-webkit-scrollbar-thumb {
    background: black;
    background-clip: content-box;
    border-right: 1px solid transparent;
    border-top: 8px solid transparent;
    border-bottom: 8px solid transparent;
    @apply rounded-full bg-slate-300;
}
::-webkit-scrollbar-track {
    background: rgb(236, 236, 236);
} */

:root {
    --column-status: 2;
}
.wrapper-status-content {
    display: flex;
}
.status-item-wrapper {
    background-color: #f1f1f1;
    border-radius: 6px;
    box-shadow: 0 0 20px hsla(0, 0%, 80%, 0.514);
    height: 320px;
    margin: 10px;
    min-width: 400px;
    overflow: hidden;
    padding: 16px 23px;
    position: relative;
    width: calc(100% / var(--column-status) - 20px);
}
.status-item {
    display: flex;
}
.status-header {
    display: flex;
    /* justify-content: space-between; */
    margin-bottom: 10px;
}
.status-status-robot {
    border-radius: 2px;
    color: var(--white-color);
    padding: 4px;
}
.status-status-robot.navigation {
    background-color: #54b435;
}
.status-status-robot.mapping {
    background-color: #ef5b0c;
}
.status-battery {
    height: 200px;
    position: relative;
    width: 200px;
}
.outer-circle {
    background-color: #ccc;
    background: conic-gradient(#ccc 265deg, #ccc 265deg);
    border-radius: 50%;
    box-shadow: 0 0 20px hsla(0, 0%, 80%, 0.616);
    height: 200px;
    transform: rotate(-130deg);
    width: 200px;
}
.inner-circle {
    border-radius: 50%;
    height: calc(100% - 30px);
    left: 50%;
    top: 50%;
    transform: translateX(-50%) translateY(-50%);
    width: calc(100% - 30px);
    z-index: 1;
}
.inner-circle,
.inner-circle:after {
    background-color: #f1f1f1;
    position: absolute;
}
.inner-circle:after {
    content: "";
    height: 160px;
    left: 35%;
    top: 94%;
    transform: rotate(45deg) translateX(-50%);
    width: 160px;
}
.battery-parameter-wrapper {
    height: 100%;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 2;
}
.battery-percent {
    font-size: 2.3em;
    font-weight: 700;
    left: 50%;
    position: absolute;
    top: 50%;
    transform: translateX(-50%) translateY(-60%);
}
.battery-parameter {
    align-items: center;
    bottom: -10%;
    display: flex;
    justify-content: space-evenly;
    position: absolute;
    width: 100%;
}
.battery-a {
    margin: 0 20px;
}
.battery-temper,
.battery-volt {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.temper-icon {
    color: red;
}
.volt-icon {
    color: orange;
}
.status-accessory {
    margin-left: 20px;
    min-width: 160px;
    width: 100%;
}
.status-line-2 {
    display: flex;
    justify-content: space-between;
    margin-top: 24px;
    width: 100%;
}
.accessoty-item-wrapper {
    align-items: center;
    display: inline-flex;
    flex-direction: column;
    margin: 0 4px 8px;
    text-align: center;
    width: 66px;
}
.accessoty-item-wrapper.active .accessoty-item {
    background: #60c15d;
    box-shadow: 8px 16px 14px -2px rgba(0, 213, 34, 0.2);
}
.accessoty-item-wrapper.inactive .accessoty-item {
    background: #ff3a3a;
    box-shadow: 8px 16px 14px -2px rgba(255, 24, 24, 0.2);
}
.accessoty-item {
    align-items: center;
    border-radius: 40%;
    display: flex;
    height: 40px;
    justify-content: center;
    width: 40px;
}
.accessoty-icon {
    fill: #fff;
    width: 24px;
}
.disconnect .io_module {
    color: #ccc !important;
}

.inactivate .accessoty-item-wrapper .accessoty-item {
    background: #ccc;
    box-shadow: none;
}
.inactivate .temper-icon,
.inactivate .volt-icon {
    color: #ccc !important;
}
.charge {
    bottom: 30px;
    left: 50%;
    position: absolute;
    transform: translateX(-50%);
}
.charging {
    color: #82cd47;
    text-shadow: 0 0 20px #82cd47;
    z-index: 3;
}
.no-change {
    color: #ccc;
}
/* ... */

